--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono|Roboto+Slab');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 *,
 *::after,
 *::before {
