--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -300,7 +300,7 @@
     }
 
     th {
-      font-weight: bold;
+      font-weight: bolder;
       white-space: nowrap;
     }
 
@@ -334,7 +334,7 @@
 
     a {
       &.title {
-        font-weight: bold;
+        font-weight: bolder;
         padding-top: $tbody-cell-padding-y;
         padding-bottom: $tbody-cell-padding-y;
 
