--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -102,9 +102,9 @@ $spacer-xl:            48px !default;
 
 // Basics - Typography - Font family
 
-$font-family-monospace:  "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
-$font-family-serif:      "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
+$font-family-monospace:  'Roboto Mono', Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace !default;
+$font-family-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif !default;
+$font-family-serif:      'Roboto Slab', Georgia, 'Times New Roman', Times, serif !default;
 
 
 
