--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -285,6 +285,8 @@
 
         &,
         &.is-highlighted {
+          color: color-chooser($white-primary, $black-primary);
+
           .d-icon,
           .texts .desc,
           .texts .name {
@@ -298,7 +300,7 @@
         &.is-highlighted.is-selected,
         &.is-selected {
           background-color: color-chooser($dropdown-link-bg-hover-dark, $dropdown-link-bg-hover-light);
-          color: inherit;
+          color: color-chooser($white-primary, $black-primary);
         }
       }
     }
